crates/carta/tests/snapshots/golden_writer__ipynb__common__soft-break.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "first line second line"
   ],
   "id": "f32ae5a7-c977-4fcb-baf3-278046303838"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
