crates/carta/tests/snapshots/golden_writer__ipynb__common__span-semantic.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "<span id=\"theid\" class=\"kbd mid mark rest\" data-k=\"v\">x</span>\n",
    "<span class=\"dfn\">term</span>"
   ],
   "id": "50bbb1ae-6c8d-4c22-8cce-0ae5baa05a54"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
