crates/carta/tests/snapshots/golden_writer__ipynb__common__span.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "a <span id=\"s\" class=\"c\" data-k=\"v\">styled</span> word"
   ],
   "id": "f79551c1-7a9a-43e6-bbcb-191df8cfc8e4"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
