crates/carta/tests/snapshots/golden_writer__ipynb__common__subscript-fallback.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "water H<sub>2</sub>O and sub<sub>ab</sub> here"
   ],
   "id": "ccea0d38-6740-4d47-adc8-6f7e348780b8"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
