crates/carta/tests/snapshots/golden_writer__ipynb__common__superscript-fallback.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "x super<sup>(ab)</sup> here"
   ],
   "id": "1a76d185-360b-4c73-898e-9d88464abd0e"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
