crates/carta/tests/snapshots/golden_writer__ipynb__common__underline-smallcaps.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "<u>under</u> <span class=\"smallcaps\">small</span>"
   ],
   "id": "2fed8512-cac7-409b-834b-5be7cb4a3c0e"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
